--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
 </head>
 
 <body>
+    <div class="pop-up visible">
+        <h3>You hit <span></span> numbers</h3>
+        <button class="reset-btn">Reset</button>
+    </div>
     <div class="wrapper">
         <h1 class="main-header">Lucky Number Lottery</h1>
+        <div class="choosen-numbers">
+            <p>Your types: <span></span></p>
+        </div>
         <div class="container">
         </div>
         <h2 class="display-numbers-h1">Your lucky numbers: <span class="display-numbers-span"></span></h2>
